@@ -1,5 +1,14 @@
 2003-10-27  Chris Blumenberg  <cblu@apple.com>
 
+	Fixed: <rdar://problem/3462523>: Safari Sometimes Destroys Applets When Going "Back"
+
+        Reviewed by darin.
+
+        * History.subproj/WebHistoryItem.m:
+        (+[WebHistoryItem _destroyAllPluginsInPendingPageCaches]): Don't destroy plug-ins that are currently being viewed.
+
+2003-10-27  Chris Blumenberg  <cblu@apple.com>
+
 	Fixed: <rdar://problem/3463144>: assertion failure when viewing jpeg with SoundPix installed
 
         Reviewed by john.
